---
title: edu.nust.engine.core.audio
config:
  look: classic
  layout: elk
  flowchart:
    curve: linear
  class:
    defaultRenderer: dagre-wrapper
---
classDiagram
  class GameAudioManager
  class SoundEffectReference
  class MusicTrackReference
  class AudioReference
GameAudioManager --> MusicTrackReference : uses
GameAudioManager --> SoundEffectReference : uses
AudioReference <|-- MusicTrackReference : extends
AudioReference <|-- SoundEffectReference : extends